--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,72 @@ nav img {
     list-style-type: disc;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+.radio-tile-group {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+}
+
+.radio-tile-group .radio-container {
+    position: relative;
+    /* height: 5rem; */
+    /* width: 8rem; */
+    margin: 0.3rem;
+}
+
+.radio-tile-group .radio-container .radio-button {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    cursor: pointer;
+}
+
+.radio-tile-group .radio-container .radio-tile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #43D7C2;
+    border-radius: 5px;
+    padding: 5px 15px;
+    transition: transform 300ms ease;
+}
+
+.radio-tile-group .radio-container img {
+    fill: #43D7C2;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    border-radius: 40px;
+}
+
+.radio-tile-group .radio-container .radio-tile-label {
+    text-align: center;
+    font-size: 0.75rem;
+    letter-spacing: 1px;
+    color: #43D7C2;
+}
+
+.radio-tile-group .radio-container .radio-button:checked+.radio-tile {
+    background-color: #43D7C2;
+    border: 2px solid #43D7C2;
+    color: white;
+}
+
+.radio-tile-group .radio-container .radio-button:checked+.radio-tile .radio-tile-label {
+    color: white;
+    background-color: #43D7C2;
+}
+
 .post-card {
     border: 1px solid #fff;
     padding: 1rem 1rem 0 1rem;
