--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
 .bg-info, .btn-info {
     background: #43D7C2 !important; color: #fff !important; border: 0; 
 }
@@ -8,10 +6,8 @@
     color: #43D7C2;
 }
 
-body.dashboard {
+body {
     background: #fbfbfb !important;
-    padding: 0;
-    margin: 0;
 }
 
 .btn-info:hover {
